--- a/Hangman.Wpf/MainWindow.xaml
+++ b/Hangman.Wpf/MainWindow.xaml
@@ -1,12 +1,97 @@
-﻿<Window x:Class="Hangman.Wpf.MainWindow"
+﻿<Window x:Class="devian.gr.Hangman.Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hangman.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Hangman" Height="350"  Width="550" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="70"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="70"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock FontFamily="Courier New" FontWeight="Bold" Grid.Column="1" x:Name="DisplayWordLabel" TextAlignment="Center" FontSize="16" VerticalAlignment="Center" Margin="5"></TextBlock>
+            <Label Grid.Column="1" x:Name="DisplayWordStatsLabel" Margin="0,45,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="10"></Label>
+            <Image Grid.Column="2" x:Name="HangmanDisplayImage" Source="/Resources/Hangman/Hangman-0.png" Margin="5" />
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="210"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Label x:Name="CorrectLettersLabel" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="#FF116419"></Label>
+            <Label x:Name="IncorrectLettersLabel" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="#FF781515"></Label>
+
+            <Label x:Name="WonGamesLabel"  Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Content="(0)"></Label>
+            <Label x:Name="LostGamesLabel" Grid.Row="1" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Left" Content="(0)"></Label>
+            <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Won"></Label>
+            <Label Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Content="Lost"></Label>
+
+            <Label x:Name="TimeLabel" Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Content=""></Label>
+
+            <Label x:Name="GameState" FontWeight="Bold" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" HorizontalAlignment="Center"></Label>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Margin="5" Grid.Row="0">
+                <WrapPanel  x:Name="LettersContainer"  Orientation="Horizontal" >
+                    <WrapPanel.Resources>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Margin" Value="5,0,5,5" />
+
+                        </Style>
+                    </WrapPanel.Resources>
+                </WrapPanel>
+
+
+            </Grid>
+            <Grid Margin="5,5,5,5" Grid.Row="1" Height="100" VerticalAlignment="Top">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Margin="5" HorizontalAlignment="Center" Orientation="Horizontal">
+                    <Button IsEnabled="False" x:Name="SolveButton" Content="Solve" Width="80" Margin="5,0,5,0"/>
+                    <TextBox IsEnabled="False" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" x:Name="SolveTextBox" Width="150" Margin="5,0,5,0"/>
+                </StackPanel>
+                <Button Grid.Row="1" Grid.Column="0" x:Name="StartButton" Content="Start" HorizontalAlignment="Left" Margin="5" Width="75"/>
+                <Button Grid.Row="2" Grid.Column="0" x:Name="StopButton" IsEnabled="False" Content="Stop" HorizontalAlignment="Left" Margin="5" Width="75" />
+
+                <Label  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" Content="Difficulty"/>
+                <ComboBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" x:Name="DifficultyComboBox" VerticalAlignment="Center" Margin="5" />
+
+                <Button Grid.Row="1" Grid.Column="4" x:Name="HistoryButton" Content="History" Margin="5" HorizontalAlignment="Right" Width="75"/>
+                <Button Grid.Row="2" Grid.Column="4" x:Name="RulesButton" Content="Rules" Margin="5" HorizontalAlignment="Right" Width="75"/>
+            </Grid>
+        </Grid>
+
     </Grid>
 </Window>
